Revert "Instruction visibility fixed "

--- a/styling.css
+++ b/styling.css
@@ -78,7 +78,6 @@ body{
     text-align: center;
     line-height: 50px;
     box-shadow: #8153a8 0px 4px 2px;
-    visibility: hidden;
 }
 
 #choices{
